--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <!-- Hero Section -->
   <section id="home">
     <div class="hero">
-      <h1>Welcome to Game Top-Up</h1>
+      <h1>Welcome to Test Web Top Up Game</h1>
       <p>Top up your favorite games quickly and safely!</p>
       <a href="#games" class="btn">Explore Games</a>
     </div>
